--- a/Skeleton/Api/PresentationBundle/Resources/config/route/route.yml.twig
+++ b/Skeleton/Api/PresentationBundle/Resources/config/route/route.yml.twig
@@ -4,12 +4,12 @@
 {% for commandQueryResponsibilitySegregation in controllerData %}
 project_{{ entityName|lower }}_get_byids:
   path: /v{_version}/{{ entityName|lower }}.{_format}/{entityIds}
-  defaults: { _controller: project.{{ projectName|lower }}.controller.{{ group|lower }}.{{ entityName|lower }}:{{ commandQueryResponsibilitySegregation.action }}Action }
+  defaults: { _controller: project.{{ projectName|lower }}.controller.{{ group }}.{{ entityName|lower }}:{{ commandQueryResponsibilitySegregation.action }}Action }
   methods: {{ commandQueryResponsibilitySegregation.action|upper }}
   requirements:
     _format: "xml|json"
     _version: "\d+"
-{% if 'query' == group|lower %}
+{% if 'query' == group %}
     entityIds: "[-\w]+(,[-\w]+)*"
 {% endif %}
 {% if not loop.last %}
