--- a/Skeleton/Api/Presentation/Coordination/Controller.php.twig
+++ b/Skeleton/Api/Presentation/Coordination/Controller.php.twig
@@ -11,6 +11,7 @@ use Symfony\Component\HttpFoundation\Response;
 {% for commandQueryResponsibilitySegregation in controllerData %}
 use {{ projectName }}\Presentation\Adapter\{{ entityName }}\{{ group }}\{{ commandQueryResponsibilitySegregation.action|ucfirst }}{{ group }}Adapter;
 use {{ projectName }}\Presentation\Adapter\{{ entityName }}\{{ group }}\{{ commandQueryResponsibilitySegregation.action|ucfirst }}{{ group }}Handler;
+use {{ projectName }}\Presentation\Request\{{ entityName }}\{{ group }}\{{ commandQueryResponsibilitySegregation.action|ucfirst }}Request;
 
 {% endfor %}
 /**
