--- a/Skeleton/Api/Tests/Application/Command/NewCommandTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/NewCommandTest.php.twig
@@ -1,6 +1,6 @@
 <?php
 
-namespace  Tests\Application\{{ entityName }}\Command\Command;
+namespace  Tests\Application\{{ entityName }}\Command;
 
 use {{ projectName }}\Application\Country\Command\NewCommand;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\CommandInterface;
