--- a/Skeleton/Api/Tests/Application/Command/PatchCommandTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/PatchCommandTest.php.twig
@@ -1,11 +1,11 @@
 <?php
 
-namespace  Tests\Application\{{ entityName }}\Command\Command;
+namespace  Tests\Application\{{ entityName }}\Command;
 
-use {{ projectName }}\Application\{{ entityName }}\Command\UpdateCommand;
+use {{ projectName }}\Application\{{ entityName }}\Command\NewCommand;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\CommandInterface;
 
-class UpdateCommandTest extends \PHPUnit_Framework_TestCase
+class PatchCommandTest extends \PHPUnit_Framework_TestCase
 {
     protected $command;
     protected $message;
@@ -14,14 +14,13 @@ class UpdateCommandTest extends \PHPUnit_Framework_TestCase
 
     public function setUp()
     {
-        $this->entityId="132456";
         $this->libelle="FRANCe";
         $this->indicatif="033";
         $this->iso="FR";
         $this->selectable=true;
         $this->reference="001";
 
-        $this->command = new UpdateCommand($this->entityId, $this->libelle,$this->indicatif,$this->iso,$this->selectable,$this->reference);
+        $this->command = new NewCommand($this->libelle,$this->indicatif,$this->iso,$this->selectable,$this->reference);
     }
 
     public function testInterface()
@@ -31,7 +30,6 @@ class UpdateCommandTest extends \PHPUnit_Framework_TestCase
 
     public function testGetters()
     {
-        $this->assertEquals($this->entityId, $this->command->getEntityId());
         $this->assertEquals($this->libelle, $this->command->getLibelle());
         $this->assertEquals($this->indicatif, $this->command->getIndicatif());
         $this->assertEquals($this->iso, $this->command->getIso());
