--- a/Skeleton/Api/Application/Command/Handler/Decorator/DeleteCommandHandlerDecorator.php.twig
+++ b/Skeleton/Api/Application/Command/Handler/Decorator/DeleteCommandHandlerDecorator.php.twig
@@ -1,4 +1,5 @@
-<?php\r\ndeclare(strict_types = 1);
+<?php
+declare(strict_types = 1);
 
 namespace {{ projectName }}\Application\{{ entityName }}\Command\Handler\Decorator;
 
