--- a/Skeleton/Api/InfrastructureBundle/DependencyInjection/InfrastructureBundleExtension.php.twig
+++ b/Skeleton/Api/InfrastructureBundle/DependencyInjection/InfrastructureBundleExtension.php.twig
@@ -1,12 +1,12 @@
 <?php
 declare(strict_types = 1);
 
-namespace {{projectName}}\InfrastructureBundle\DependencyInjection;
+namespace {{ projectName }}\InfrastructureBundle\DependencyInjection;
 
 use Symfony\Component\Config\FileLocator;
 use Symfony\Component\HttpKernel\DependencyInjection\Extension;
 
-use Symfony\Component\DependencyInjection{
+use Symfony\Component\DependencyInjection\{
     ContainerBuilder,
     Loader
 };
