--- a/Skeleton/Api/InfrastructureBundle/DependencyInjection/Compiler/CreateRepositoryFactoryPass.php.twig
+++ b/Skeleton/Api/InfrastructureBundle/DependencyInjection/Compiler/CreateRepositoryFactoryPass.php.twig
@@ -6,7 +6,15 @@ namespace {{ projectName }}\InfrastructureBundle\DependencyInjection\Compiler;
 use Symfony\Component\DependencyInjection\Compiler\CompilerPassInterface;
 use Symfony\Component\DependencyInjection\ContainerBuilder;
 use Symfony\Component\DependencyInjection\Reference;
+use Symfony\Component\DependencyInjection\Exception\InvalidArgumentException;
 
+/**
+ * Class CreateRepositoryFactoryPass.
+ *
+ * @category {{ projectName }}
+ * @package InfrastructureBundle
+ * @subpackage DependencyInjection\Compiler
+ */
 class CreateRepositoryFactoryPass implements CompilerPassInterface
 {
     const TYPE_DBMS = [
@@ -19,6 +27,7 @@ class CreateRepositoryFactoryPass implements CompilerPassInterface
      * You can modify the container here before it is dumped to PHP code.
      *
      * @param ContainerBuilder $container
+     * @throws InvalidArgumentException
      */
     public function process(ContainerBuilder $container)
     {
@@ -27,13 +36,12 @@ class CreateRepositoryFactoryPass implements CompilerPassInterface
 {% for entityName,Vo in entities %}
 
         // {{ entityName|upper }} entity
-        $class = $container->getParameter("project.{{ projectName|lower }}.{{ entityName|lower }}.${type}.repository.factory.class");
+        $class = $container->getParameter('project.{{ projectName|lower }}.{{ entityName|lower }}.' . $type . '.repository.factory.class');
         $id = 'project.{{ projectName|lower }}.{{ entityName|lower }}.repository.factory';
 
         // set service
         $definition = $container->register($id, $class);
-        $definition->addArgument(new Reference(self::TYPE_DBMS[$type]);
-
+        $definition->addArgument(new Reference(self::TYPE_DBMS[$type]));
 {% endfor %}
     }
 }
